# PeaSTB

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  package_check_bk_gut.txt  peastb_skript_test.md  project_description.md  pyproject.toml  sample_packages.txt  tox.ini
dev/: sync_build.py  wf_delivery.py  wf_quality.py  wf_quality.toml
peastb/: pea01_main.py  pea02_package_check.py  pea03_analyzer.py  pea04_output.py  pea05_utilities.py  version.py
tests/: test_analyzer.py  test_output.py  test_package_check.py
tests_installation/: test_installation.py
